2000-01-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.4 release

2008-12-15	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.3 release

2008-12-02	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.2 release

2008-11-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* screenshots.html
	* getinvolved.html
	* download.html
	* index.html:
	Updated URL to GNOME projects listing

2008-11-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* deskbar/images/icons
	* deskbar/images/Makefile.am
	* getinvolved.html
	* Makefile.am
	* new-style_modules.html:
	Added guide "Writing new-style modules for Deskbar-Applet"

2008-11-22	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.24.2 release

2008-11-03	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.25.1 release

2008-09-22	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.24.0 release

2008-09-08	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.92 release

2008-09-01	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.91 release

2008-08-18	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.90 release

2008-08-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.6 release

2008-08-03	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.22.3.1 release

2008-07-21	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.23.5 release

2008-07-16	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* index.html:
	Fixed some typos (fixes bug #540110)
	
2008-06-30	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* download.html:
	* index.html:
	Added 2.22.3 release

2008-06-29	Sebastian Pölsterl	<sebp@cvs.gnome.org>

	* images/screenshots