@@ -1,3 +1,9 @@
+2000-01-12	Sebastian Pölsterl	<sebp@cvs.gnome.org>
+
+	* download.html:
+	* index.html:
+	Added 2.24.3 release
+
 2000-01-05	Sebastian Pölsterl	<sebp@cvs.gnome.org>
 
 	* download.html:
